--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
   font-family: Bebas Neue ;
 }
 
-
 /* Slots Style  */
 .slots {
   margin-top: 50px;
@@ -20,12 +19,13 @@
   background-color: pink;
   border-radius: 30px;
   gap: 20px;
+  padding: 0 50px;
 }
 
 /* REEL styles class */
 .reel {
   width: 89px;
-  height: 200px;
+  /* height: 200px; */
   background-color:#fff ;
   border: 1px solid #ccc;
   border-radius: 10px;
@@ -35,6 +35,9 @@
   align-items: center;
   justify-content: center;
   font-size: 24px;
+  position: relative;
+  height: 36px;
+  overflow: hidden;
 }
 
 .spin-button {
@@ -56,11 +59,30 @@
   background-color: pink;
   cursor: pointer;
   border: none;
+  font-size: 18px;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.god-mode-button.active {
+  background-color: #ebbac3;
 }
 
 .spin-button:hover {
   background-color: #e74c3c; 
 
+}
+
+.winnings-base {
+  font-family: "Bebas Neue";
+  height: 20px;
+  margin-top: 40px;
+  font-size: 20px;
+}
+
+.winnings {
+  height: 20px;
+  margin-top: 40px;
 }
 
 .control-ui {
@@ -74,6 +96,29 @@
   margin-right: 15px;
 }
 
-.god-mode-button.active {
-  background-color: #000;
+.symbol {
+  transform: translateY(-100%);
+  transition: transform 0.1s linear;
+  position: absolute;
+  top: 0;
+}
+
+.spin { 
+  transform: translateY(100%);
+}
+
+.stop-spin {
+  transform: translateY(0);
+}
+
+/* utilities */
+.flex-center-column {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.ml-auto {
+  margin-left: auto;
 }
